[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/main.gd" type="Script" id=1]
[ext_resource path="res://src/menu/main_menu.tscn" type="PackedScene" id=2]
[ext_resource path="res://theme.tres" type="Theme" id=4]
[ext_resource path="res://fonts/DisposableDroidBB.tres" type="DynamicFont" id=5]
[ext_resource path="res://src/menu/textures/base.png" type="Texture" id=6]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Main_menu" parent="." instance=ExtResource( 2 )]

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = 24.0
margin_right = 464.0
margin_bottom = 32.0
texture = ExtResource( 6 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="title" type="Label" parent="NinePatchRect"]
margin_right = 213.0
margin_bottom = 16.0
rect_scale = Vector2( 2, 2 )
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 5 )
text = " Meth, Magician, and Latto-latto"

[connection signal="cont" from="Main_menu" to="." method="_on_Main_menu_cont"]
[connection signal="play" from="Main_menu" to="." method="_on_Main_menu_play"]
[connection signal="quit" from="Main_menu" to="." method="_on_Main_menu_quit"]
